# SEER-io

./: .gitignore  .tmp_worker.js  Cargo.toml  README.md  bot_node_worker.js  coordinator_worker_api.js  explorer_worker.js  index.html  local_node_config.json  local_node_state.json  metadata.json  metadata_bot.json  metadata_coordinator.json  package.json  seer_node_placeholder.txt  setup.sh  tokenomics_oracle.py  wrangler.toml
.github/workflows/: ci.yml  deploy-pages.yml  deploy-worker.yml  register-node.yml
bridge/: README.md
bridge/contracts/: seer_jetton.tact
config/: genesis.toml
crates/seer-consensus/: Cargo.toml  README.md
crates/seer-consensus/src/: fishermen.rs  lib.rs  pow.rs  vertical_patch.rs
crates/seer-core/: Cargo.toml  README.md
crates/seer-core/src/: block.rs  cell.rs  ledger.rs  lib.rs  transaction.rs
crates/seer-crypto/: Cargo.toml  README.md
crates/seer-crypto/src/: adnl.rs  lib.rs  zero_channel.rs
crates/seer-economy/: Cargo.toml  README.md
crates/seer-economy/src/: constants.rs  gini.rs  lib.rs  metrics.rs
crates/seer-network/: Cargo.toml
crates/seer-network/src/: dht.rs  hypercube.rs  lib.rs  overlay.rs
crates/seer-storage/: Cargo.toml
crates/seer-storage/src/: db.rs  lib.rs
crates/seer-telegram/: Cargo.toml  README.md
crates/seer-telegram/src/: bot_node.rs  factory.rs  lib.rs  master_channel.rs  transport.rs
docs/: TROUBLESHOOTING.md
explorer/: index.html
scripts/: README.md  run-local.js  setup-ci.sh  setup.sh
simulation/: Cargo.toml
simulation/src/: convergence.rs  lib.rs
workers/coordinator/src/: index.js
